# ChangeLog for sys-libs/readline
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.149 2010/01/24 16:47:12 klausman Exp $

  24 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  readline-6.0_p4.ebuild:
  Stable on alpha, bug #297906

  06 Jan 2010; Markus Meier <maekke@gentoo.org> readline-6.0_p4.ebuild:
  amd64 stable, bug #297906

*readline-6.1 (05 Jan 2010)

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> +readline-6.1.ebuild:
  Version bump.

  05 Jan 2010; Mike Frysinger <vapier@gentoo.org> readline-5.2_p14.ebuild:
  Stabilize old ABI SLOT version.

  29 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  readline-6.0_p4.ebuild:
  stable x86, bug 297906

  28 Dec 2009; nixnut <nixnut@gentoo.org> readline-6.0_p4.ebuild:
  ppc stable #297906

  28 Dec 2009; Tiago Cunha <tcunha@gentoo.org> readline-6.0_p4.ebuild:
  stable sparc, bug 297906

  26 Dec 2009; Brent Baude <ranger@gentoo.org> readline-6.0_p4.ebuild:
  Marking readline-6.0_p4 ppc64 for bug 297906

  24 Dec 2009; Jeroen Roovers <jer@gentoo.org> readline-6.0_p4.ebuild:
  Stable for HPPA (bug #297906).

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org> readline-6.0_p3.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #283155

*readline-5.2_p14 (03 Oct 2009)

  03 Oct 2009; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p14.ebuild:
  New version for .5 SONAME only.

  30 Sep 2009; Mike Frysinger <vapier@gentoo.org> readline-6.0_p4.ebuild:
  Restore readline symlink to find local headers.

  27 Sep 2009; Mike Frysinger <vapier@gentoo.org> readline-6.0_p4.ebuild:
  Link rlfe dynamically against readline #284568 by Jonathan Callen.

  19 Sep 2009; nixnut <nixnut@gentoo.org> readline-6.0_p3.ebuild:
  ppc stable #283155

  13 Sep 2009; Markus Meier <maekke@gentoo.org> readline-6.0_p3.ebuild:
  arm stable, bug #283155

  09 Sep 2009; Markus Meier <maekke@gentoo.org> readline-6.0_p3.ebuild:
  amd64/x86 stable, bug #283155
