@@ -49,8 +49,7 @@ DIST readline60-002 1369 RMD160 d1e9e7d6bdb53b11348a1502335a715733130415 SHA1 8e
 DIST readline60-003 1970 RMD160 9c6276146a6358d87bdf86ce0d1b9eb8e3a4a2e6 SHA1 f1ffdd3ad847272ce37de17494bca1a895ad1a02 SHA256 523c9bee365edce4ce051c33b157c7f340a695c69756eb998c0c0ae29dd29abf
 DIST readline60-004 1840 RMD160 b03c01243ea3653cd5b7307c2546aae110603b60 SHA1 4fb45252521e063776bef3aecd874a524fc9c4f8 SHA256 f5cbb02ad37e682f0876d454a07bc2b4ad433a4b0f9f096893454bec1af3eafb
 EBUILD readline-5.2_p14.ebuild 2224 RMD160 24516dcec1f3592eb2c62064129983933981469c SHA1 7654756c5ee03455fdb202ea1169868d11395129 SHA256 342070f3d03496feb3284a15afd8d8313a86561a08f6039c42af66a2b454b2e6
-EBUILD readline-6.0_p3.ebuild 3615 RMD160 80a069b28ee160e97ae25b1448d1826333583d46 SHA1 14309825651fd600fc9c7f7b6c5a8e592a0b01b9 SHA256 58c1f58bfed5605803051e8b94046771598333eb3f8ced607316f159ecaac41b
-EBUILD readline-6.0_p4.ebuild 3564 RMD160 7f7660671aa9bf523f6ba0f94f5784825e2fd435 SHA1 30054c810fde5c015fc249528aadbbe2e54fec4d SHA256 18d5a94fdf53124e1c0d633b178133ce5615117818236d3a47c7e5611f5af875
-EBUILD readline-6.1-r00.1.ebuild 3777 RMD160 f7ea85daad06e747e1497c82d040cc0e159dbad9 SHA1 81fb487b47cdbf7043df1b6f5a0199be105e3263 SHA256 638a05133f416aeb87efdbdc3c67b46a06759ffa018abc4254cddee7508915e5
-MISC ChangeLog 18971 RMD160 16f5617b25758239852d89dfebbc8323a42fdd39 SHA1 699f66dfc9eabe40772aff47b1d2eb3f339f72ea SHA256 c40a4726c14def8e2369f64510363694401271ddeb33181ed6a2ce312c6b2662
+EBUILD readline-6.0_p4.ebuild 3565 RMD160 7eaa2a34f02fc0ac0c32a3cc2d523cdfb370f3f3 SHA1 9b69bccd79b657aa050b4345a4934be017385f02 SHA256 b788a483a365cf4a9e1751c19c17d3cdd33ca1fc3b2ac2b8402574d425333c31
+EBUILD readline-6.1-r00.1.ebuild 3780 RMD160 5377e256b452931743f7351eea619ee3de2eec59 SHA1 2b9e83737b0a3910a7ad83a9ab90d9d176368928 SHA256 5c36933805f00c4cbbfe8c1c59e9beb7509583b9f1e2582d7c0fdea8d34075d4
+MISC ChangeLog 19137 RMD160 c80d9722b19b3991221afc5ec2f9590734fa6d2e SHA1 f53083adf4468eae931a1d3c6e183433383173a7 SHA256 ac4432d4e2d94431b86481c9fbd89a5ca4f56a8ae2c65bb86ef392ba91befb53
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
